--- a/projects/019.jsProjects/010-calculator/index.html
+++ b/projects/019.jsProjects/010-calculator/index.html
@@ -109,15 +109,31 @@
 
         <script>
             const btns = document.querySelectorAll('.btn')
-            const equal = document.querySelector('.btn-equal')
-            const clear = document.querySelector('.btn-clear')
             const screen = document.querySelector('.screen')
+            const equalBtn = document.querySelector('.btn-equal')
+            const clearBtn = document.querySelector('.btn-clear')
 
+            // all the buttons
             for (let i = 0; i < btns.length; i++) {
-                bnts[i].addEventListener('click', function() {
-                    let number =
+                // loop thru all the buttons btns[i] indexes
+                btns[i].addEventListener('click', function() {
+                    let number = btns[i].getAttribute('data-num');
+                    // get the attributes of 'data-num' (+,-,*,1)
+                    screen.value += number; //show attributes
                 })
             }
+
+            // equal button
+            equalBtn.addEventListener('click', function() {
+                let value = eval(screen.value);
+                // when clicked, it evaluates whats on the screen
+                screen.value = value;
+            })
+
+            // clear button
+            clearBtn.addEventListener('click', function() {
+                screen.value = '';
+            })
         </script>
     </section>
 </body>
