project 10 - btnPer deleted

--- a/projects/019.jsProjects/010-calculator/index.html
+++ b/projects/019.jsProjects/010-calculator/index.html
@@ -90,7 +90,7 @@
             <input type="text" class="screen">
         </form>
         <button class="btn-clear">AC</button>
-        <button class="btn btnOp btnPer" data-num="%">%</button>
+        <button class="btn btnOp" data-num="%">%</button>
         <button class="btn" data-num="1">1</button>
         <button class="btn btn2 btnOp" data-num="/">/</button>
         <button class="btn" data-num="2">2</button>
@@ -114,7 +114,6 @@
         const screen = document.querySelector('.screen')
         const equalBtn = document.querySelector('.btn-equal')
         const clearBtn = document.querySelector('.btn-clear')
-            // const percentBtn = document.querySelector('.btnPer')
 
         // all the buttons
         for (let i = 0; i < btns.length; i++) {
