--- a/projects/019.jsProjects/09-digitalClock/index.html
+++ b/projects/019.jsProjects/09-digitalClock/index.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+    <!-- Finished at 7:20PM, April-23, 2020 -->
     <div id="clock"></div>
     <script>
         function showTime() {
