--- a/projects/024.quizApps/quiz-level-1/index.html
+++ b/projects/024.quizApps/quiz-level-1/index.html
@@ -10,12 +10,13 @@
 </head>
 
 <body>
+    <!-- Restarted at 11:25, April 24, 2020 -->
     <div class="quiz-container">
         <div class="question-number">
             <h3>Question <span class="question-num-value"></span> of <span class="total-question"></span></h3>
         </div>
         <div class="question">
-
+            <!-- javascript questions go here -->
         </div>
         <div class="options">
             <div id="0" class="option1" onclick="check(this)"></div>
