quiz-level-3-beginning

--- a/projects/024.quizApps/quiz-level-1/index.html
+++ b/projects/024.quizApps/quiz-level-1/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <!-- Restarted at 11:25, April 24, 2020 -->
+    <!-- Restarted: 11:25, April 24, 2020 -->
+    <!-- Finished: 16:00, April 24, 2020 -->
     <div class="quiz-container">
         <div class="question-number">
             <h3>Question <span class="question-num-value"></span> of <span class="total-question"></span></h3>
