add some style and videos to quiz-level-2

--- a/projects/019.jsProjects/07-testimonials/index.html
+++ b/projects/019.jsProjects/07-testimonials/index.html
@@ -21,6 +21,9 @@
             <h3 class="customer">Customer Name</h3>
             <img class="stars" src="img/stars.png" alt="stars">
             <p id="text">For some people, life is a battle. For others, its a test. But to me life is a miracle. If one is curious enough, s/he can literally work wonders.</p>
+            <!-- <video src="" width="320" height="240" controls>
+                <source src="vid/voc-1.mp4" type="video/mp4">
+            </video> -->
             <p class="bigQuote">,,</p>
             <button class="btn prevBtn">{</button>
             <button class="btn nextBtn">}</button>
