--- a/projects/024.quizApps/quiz-level-2/index.html
+++ b/projects/024.quizApps/quiz-level-2/index.html
@@ -5,12 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emuallim Spanish</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <script defer src="script.js"></script>
 </head>
 
 <body>
-
+    <div id="container">
+        <!-- <div id="start">Start Quiz</div> -->
+        <div class="vocabulary">
+            <h4 class="lesson">VOCABULARY</h4>
+            <div class="vidDiv">
+                <p>Repeat the action!</p>
+                <video width="320" height="240" controls loop>
+                    <source src="vid/voc-1.mp4" type="video/mp4">
+                </video>
+                <p>Es - is</p>
+            </div>
+            <button class="btn prevBtn">Prev</button>
+            <button class="btn nextBtn">Next</button>
+        </div>
+        <div id="quiz" style="display: none;">
+            <div id="question">question</div>
+            <div id="qImg">Image</div>
+            <div id="choices">
+                <div class="choice" id="A" onclick="checkAnswer('A')">A</div>
+                <div class="choice" id="B" onclick="checkAnswer('B')">B</div>
+                <div class="choice" id="C" onclick="checkAnswer('C')">C</div>
+            </div>
+            <div id="timer">
+                <div id="counter">counter</div>
+                <div id="btimeGauge">btimeGauge</div>
+                <div id="timeGauge">timeGauge</div>
+            </div>
+            <div id="progress">progress</div>
+        </div>
+        <!-- <div id="score">score</div> -->
+    </div>
 </body>
 
 </html>
