add 3 new projects to my portfolio

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                                 <i class="fas fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/portfolio/blitz.jpg" alt="">
+                        <img class="img-fluid" src="img/portfolio/proj-26.jpg" alt="">
                     </div>
                 </div>
 
@@ -362,7 +362,7 @@
                                 <i class="fas fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/portfolio/blitz.jpg" alt="">
+                        <img class="img-fluid" src="img/portfolio/proj-27.jpg" alt="">
                     </div>
                 </div>
 
@@ -374,7 +374,7 @@
                                 <i class="fas fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="img/portfolio/blitz.jpg" alt="">
+                        <img class="img-fluid" src="img/portfolio/proj-28.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -1345,6 +1345,110 @@
         </div>
     </div>
 
+    <!-- Portfolio Modal 22 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal22" tabindex="-1" role="dialog" aria-labelledby="portfolioModal22Label" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                </button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title -->
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tip Calculator</h2>
+                                <!-- Icon Divider -->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                    <div class="divider-custom-icon">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <!-- Portfolio Modal - Image -->
+                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-26.jpg" alt="">
+                                <!-- Portfolio Modal - Text -->
+                                <p class="mb-5">April 2020 - This is another project that I built recently. The idea comes from "100 JavaScript Projects"</p>
+                                <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
+                                <a class="btn btn-primary" href="projects/019.jsProjects/08-tipCalculate/index.html" target="_blank">See Page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 23 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal23" tabindex="-1" role="dialog" aria-labelledby="portfolioModal23Label" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                </button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title -->
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Calculator</h2>
+                                <!-- Icon Divider -->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                    <div class="divider-custom-icon">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <!-- Portfolio Modal - Image -->
+                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-27.jpg" alt="">
+                                <!-- Portfolio Modal - Text -->
+                                <p class="mb-5">April 2020 - I thought I would have to write at least 100 lines of JavaScript code to get this to work. Boy was I wrong! It took only a few lines of code to build this awesome calculator.</p>
+                                <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
+                                <a class="btn btn-primary" href="projects/019.jsProjects/010-calculator/index.html" target="_blank">See Page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 24 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal24" tabindex="-1" role="dialog" aria-labelledby="portfolioModal24Label" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                </button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title -->
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Quiz App</h2>
+                                <!-- Icon Divider -->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                    <div class="divider-custom-icon">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <!-- Portfolio Modal - Image -->
+                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-28.jpg" alt="">
+                                <!-- Portfolio Modal - Text -->
+                                <p class="mb-5">April 2020 - This project took some time to build b/c it turned out to be more complex than it looked. But I was satisfied with the end result.</p>
+                                <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
+                                <a class="btn btn-primary" href="projects/024.quizApps/quiz-level-1/index.html" target="_blank">See Page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
