--- a/projects/019.jsProjects/08-tipCalculate/index.html
+++ b/projects/019.jsProjects/08-tipCalculate/index.html
@@ -10,6 +10,7 @@
         html {
             font-size: 62.5%;
             box-sizing: border-box;
+            background-color: cornsilk;
         }
         
         @media (max-width: 710px) {
