create carousel for vocabulary

--- a/projects/024.quizApps/quiz-level-2/index.html
+++ b/projects/024.quizApps/quiz-level-2/index.html
@@ -10,20 +10,35 @@
 </head>
 
 <body>
+    <!-- started April 24, 2020  -->
     <div id="container">
-        <!-- <div id="start">Start Quiz</div> -->
-        <h4 class="lesson">VOCABULARY</h4>
-        <div class="vocabulary">
-            <div class="vidDiv">
-                <p>Repeat the action!</p>
-                <video controls loop>
+        <div id="start">
+            <h4 class="start-header">TPRS Spanish</h4>
+            <div class="start-body">
+                <p>You are going to learn Spanish in a completely different and fun way. You're going to do only 4 things:</p>
+                <ol>
+                    <li>Learn vocabulary through actions</li>
+                    <li>Learn a story in 100% Spanish</li>
+                    <li>Test your Spanish through quiz</li>
+                    <li>Retell the story in your words</li>
+                </ol>
+            </div>
+            <button class="start-btn">start</button>
+        </div>
+        <h4 class="lesson hide">VOCABULARY</h4>
+        <div class="section1 hide">
+            <div class="vocabulary">
+                <div class="vidDiv">
+                    <p>Repeat the action 3x!</p>
+                    <video controls loop>
                     <source src="vid/voc-1.mp4" type="video/mp4">
                 </video>
-                <p class="words"><b>Es</b> - <i>is</i></p>
-            </div>
-            <div class="buttons">
-                <button class="btn prevBtn">Prev</button>
-                <button class="btn nextBtn">Next</button>
+                    <p class="words">(1) <b>Es</b> - <i>is</i></p>
+                </div>
+                <div class="buttons">
+                    <button class="btn prevBtn">Prev</button>
+                    <button class="btn nextBtn">Next</button>
+                </div>
             </div>
         </div>
         <div id="quiz" style="display: none;">
