style and function "start" page. The button works now.

--- a/projects/024.quizApps/quiz-level-2/index.html
+++ b/projects/024.quizApps/quiz-level-2/index.html
@@ -12,36 +12,35 @@
 <body>
     <!-- started April 24, 2020  -->
     <div id="container">
-        <div id="start">
-            <h4 class="start-header">TPRS Spanish</h4>
+        <div class="start">
+            <h4 class="start-header">PLAY SPANISH</h4>
             <div class="start-body">
-                <p>You are going to learn Spanish in a completely different and fun way. You're going to do only 4 things:</p>
+                <p>You are going to learn Spanish in a completely different and fun way. All you got to do is just 4 things:</p>
                 <ol>
-                    <li>Learn vocabulary through actions</li>
-                    <li>Learn a story in 100% Spanish</li>
-                    <li>Test your Spanish through quiz</li>
-                    <li>Retell the story in your words</li>
+                    <li>Learn <u>vocab</u>. through actions</li>
+                    <li>Learn a <u>story</u> in 100% Spanish</li>
+                    <li>Test your Spanish through <u>quiz</u></li>
+                    <li><u>Retell</u> the story in your words</li>
                 </ol>
+                <p>To engrave the vocabulary on your memory, you must <u>do the actions</u> & <u>retell the story</u> in your own words! <br><br>Enjoy!</p>
             </div>
-            <button class="start-btn">start</button>
+            <div class="start-btn">
+                <button class="startBtn">start</button>
+            </div>
         </div>
-        <h4 class="lesson hide">VOCABULARY</h4>
-        <div class="section1 hide">
-            <div class="vocabulary">
-                <div class="vidDiv">
-                    <p>Repeat the action 3x!</p>
-                    <video controls loop>
+        <div class="vocabulary hide">
+            <h4 class="header">VOCABULARY</h4>
+            <div class="vidDiv">
+                <p>Repeat the action 3x!</p>
+                <video controls loop>
                     <source src="vid/voc-1.mp4" type="video/mp4">
                 </video>
-                    <p class="words">(1) <b>Es</b> - <i>is</i></p>
-                </div>
-                <div class="buttons">
-                    <button class="btn prevBtn">Prev</button>
-                    <button class="btn nextBtn">Next</button>
-                </div>
+                <p class="words ">(1) <b>Es</b> - <i>is</i></p>
             </div>
+            <button class="btn prevBtn">Prev</button>
+            <button class="btn nextBtn">Next</button>
         </div>
-        <div id="quiz" style="display: none;">
+        <div id="quiz" class="hide">
             <div id="question">question</div>
             <div id="qImg">Image</div>
             <div id="choices">
